styles.css
:root {
  /* COLORS */
  --lime-green: #ccff00;
  --black: #000000;
  --purple: #8941ff;
  --blue: #9dd2cf;
  --orange: #ff6915;
  --yellow: #ffb800;
  --dark-grey: #525252;
  --off-white: #e4e4e4;
  --white: #ffffff;
  --dark-overlay: #0d0617bd;

  --main-content-width: 92vw;
  --side-bar-width: 8vw;

  --container-padding: 3vw;

  /* SLIDE ANIMATION */
  --slide-up: 1s ease-out;

  --transition-05s: all 0.5s;
  --transition-1s: all 1s;
  --transition-3s: all 1.5s;
}

html {
  background: var(--black);
  overflow: hidden;
}

/* INITIAL PAGE FADE IN */

.hide-page .main::after {
  content: "";
  background: var(--black);
  position: absolute;
  z-index: 9999999999;
  width: 100%;
  height: 100vh;
  top: 0;
  left: 0;
}

.show-page .main::after {
  background: transparent;
  z-index: -1;
  transition: all 1s;
}

/* Overriding The Default Text Selection Color With CSS */

::selection {
  background: var(--purple); /* WebKit/Blink Browsers */
}

::-moz-selection {
  background: var(--purple); /* Gecko Browsers */
}

/* BTNS RESET */
html,
input,
select,
textarea,
button,
a {
  -webkit-tap-highlight-color: transparent !important; /* for removing the highlight */
}

a:focus,
button:focus {
  outline: none;
  border: 0;
}

/* HIDE SCROLLBARS across the website */

body::-webkit-scrollbar,
div::-webkit-scrollbar,
.main-content::-webkit-scrollbar,
.col-two-portfolio::-webkit-scrollbar,
.list-ideas-wrapper::-webkit-scrollbar,
.main-content-ideas::-webkit-scrollbar,
.main-content-post::-webkit-scrollbar,
.main-content-connect::-webkit-scrollbar {
  display: none; /* CHROME */
}

body,
div,
.main-content,
.col-two-portfolio,
.list-ideas-wrapper,
.main-content-ideas,
.main-content-post,
.main-content-connect {
  -ms-overflow-style: none;
  scrollbar-width: none; /* Firefox / EDGE  */
}

/* Pages Webflow BARBA JS*/

.fixed {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 10;
}

.transition {
  display: flex;
  position: absolute;
  z-index: 10000000;
  height: 100vh;
  width: 100%;
  top: 0;
  left: 0;
  margin: 0;
  pointer-events: none;
}

.transition .transition-shape {
  transform: scaleY(0);
  background-color: var(--lime-green);
  width: 100%;
}
/*
.page-about .section {
  min-height: 100vh;
}
*/

/* ---------- PRELOADER ---------- 
.preloader::after {
  content: '';
  position: absolute;
  bottom: -400px;
  left: 0;
  width: 100%;
  height: 400px;
  background-image: linear-gradient(0deg, rgba(255,255,255,0), 0% rgba(204,255,0,1) 100%);
}
*/
.preloader {
  display: flex;
  width: 100%;
  height: 100%;
}

/* ---------- MOUSE ---------- */

.mouse {
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  background-color: var(--lime-green);
  color: var(--white);
  width: 94px;
  height: 94px;
  position: absolute;
  border-radius: 100%;
  top: 0;
  left: 0;
  z-index: 205;
  pointer-events: none;
}

.mouse div {
  position: relative;
  font-size: 1.2rem;
  color: var(--black);
  -moz-user-select: none;
  -khtml-user-select: none;
  -webkit-user-select: none;
  user-select: none;
}

.click-me:hover {
  cursor: pointer;
}

@media only screen and (max-width: 1599px) {
  .mouse {
    width: 75px;
    height: 75px;
  }
}

@media only screen and (max-width: 1400px) {
  .mouse {
    width: 60px;
    height: 60px;
  }

  .mouse > div {
    font-size: 0.9rem;
  }
}

@media only screen and (min-width: 1025px) {
  .cursor {
    position: fixed;
    pointer-events: none;
    opacity: 0;
  }

  .cursor-dot-below {
    top: -7px;
    left: -6px;
    z-index: 5;
  }

  .cursor-dot-below .inner-shape-below {
    display: block;
    width: 12px;
    height: 12px;
    background-color: var(--lime-green);
    border-radius: 50%;
  }

  .cursor-dot-above {
    top: -15px;
    left: -13px;
    z-index: 100;
  }

  .cursor-dot-above .inner-shape-above {
    display: block;
    width: 12px;
    height: 12px;
    background-color: var(--lime-green);
    border-radius: 50%;
  }

  /* DOT SCROLL */
  .cursor-dot-text {
    top: -15px;
    left: -13px;
    z-index: 5;
  }

  .cursor-dot-text .inner-dot-content {
    display: block;
    width: 20px;
    height: 20px;
    background-color: var(--lime-green);
    border-radius: 50%;
  }

  .cursor-dot-text .inner-dot-text {
    position: absolute;
    margin: 0 auto;
    font-size: 4px;
    color: var(--black);
    width: 100%;
    text-align: center;
  }
}

/* ---------- Gradient Line ---------- */
@media only screen and (min-width: 1025px) {
  .gradient-line::before {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    height: 100%;
    width: 7px;
    background: rgb(130, 59, 248);
    background: linear-gradient(
      0deg,
      rgba(130, 59, 248, 1) 0%,
      rgba(157, 210, 207, 1) 25%,
      rgba(204, 255, 0, 1) 50%,
      rgba(255, 184, 0, 1) 75%,
      rgba(255, 114, 0, 1) 100%
    );
    z-index: 11;
  }
}

/* ###########################################################################*/
/* 										FORM 									*/
/* ###########################################################################*/

.success-message {
  opacity: 0;
  transition: var(--transition-1s);
}

.success-message.w-form-done {
  opacity: 1;
}

/* ###########################################################################*/
/* 										MENUS 									*/
/* ###########################################################################*/

/* ---------- DESKTOP MENU ---------- */

.logo {
  top: var(--container-padding);
  left: var(--container-padding);
}

.logo .logo-dynamic-color svg path {
  transition: var(--transition-05s);
}

.logo .logo-dynamic-color:hover svg path {
  fill: var(--lime-green) !important;
}

/* Page Portfolio */

/* Page Connect */
.page-connect .logo .logo-dynamic-color svg path {
  fill: var(--black) !important;
}

.page-connect .logo .logo-dynamic-color:hover svg path {
  fill: var(--white) !important;
}
/* ... */

